fixed header photo cut off

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header-image img {
-  max-width: 80%;
+  max-width: 70%;
   height: auto;
   border-radius: 50%;
 }
